--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vuetify-test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>你的浏览器尚未启用JavaScript功能！</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
